# Multi-Class-Sentiment-Classification-

./: .gitignore  LICENSE  README.md  pyproject.toml  twitter_LSTM.ipynb  twitter_bert.ipynb  twitter_bilstm.ipynb  twitter_rf.ipynb  twitter_tsvd.ipynb
.github/workflows/: ci.yml
docs/: PAPER_REPRODUCTION.md
multiclass_sentiment/: __init__.py  cli.py  data.py  modeling.py
multiclass_sentiment/experiments/: __init__.py  common.py  keras_models.py  m2_word2vec_rf.py  m5_bert.py
tests/: test_data.py  test_experiments.py
